--- a/chat/chat.html
+++ b/chat/chat.html
@@ -25,7 +25,7 @@
         <div class = "row">
           <div class = "col-lg-16">
             <div class="jumbotron">
-              <h1>Nathan's Chat Server</h1>
+              <h1>Chat Server</h1>
               <p>Using AngularJS and PubNub</p>
             </div>
             
@@ -47,10 +47,7 @@
   							<button type="button" class="close" data-dismiss="alert">×</button>
   							Most Recent Messages Will Appear at the Top of the Chat Box
   						</div>
-               <div class="alert alert-dismissible alert-danger">
-  							<button type="button" class="close" data-dismiss="alert">×</button>
-  							NEW UPDATE: Emojis Included: Aside from typable faces, use emojis by typing "()" after the emoji name! Ex. I love watermelon()
-  						</div>
+          
                 <div ng-show="loggedIn" id="logout">
                   <span ng-click="attemptLogout()"><a class="btn btn-warning">Log Out</a></span>
                 </div>
