--- a/chat/index.html
+++ b/chat/index.html
@@ -15,7 +15,7 @@
     <script src="jquery.js"></script>
     <meta charset="utf-8">
     <title>Chat Server</title>
-    <link rel="icon" type="image/png" href="http://iconshow.me/media/images/ui/ios7-icons/png/512/chatbubble-working.png">
+    <link rel="icon" type="image/png" href="https://iconshow.me/media/images/ui/ios7-icons/png/512/chatbubble-working.png">
 
 
   </head>
