--- a/stripecharity/index.html
+++ b/stripecharity/index.html
@@ -1,3 +1,7 @@
+<!doctype html>
+<head>
+</head>
+<body>
 <form action="/your-charge-code" method="POST" id="payment-form">
   <span class="payment-errors"></span>
 
@@ -33,3 +37,6 @@
 
   <input type="submit" class="submit" value="Submit Payment">
 </form>
+
+</body>
+</div>
