--- a/stripecharity/index.html
+++ b/stripecharity/index.html
@@ -37,6 +37,6 @@
 
   <input type="submit" class="submit" value="Submit Payment">
 </form>
-
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 </body>
 </div>
