--- a/stripecharity/index.html
+++ b/stripecharity/index.html
@@ -1,7 +1,16 @@
 <!doctype html>
+<html>
 <head>
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+
 </head>
 <body>
+
+
 <form action="/your-charge-code" method="POST" id="payment-form">
   <span class="payment-errors"></span>
 
@@ -37,6 +46,50 @@
 
   <input type="submit" class="submit" value="Submit Payment">
 </form>
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
 </body>
 </div>
+
+<!---- this ode should be after the body tag --> 
+<script type="text/javascript">
+  Stripe.setPublishableKey('pk_test_tweCk7wsgWmhPQl30DGMfpro');
+</script>
+<script>
+function stripeResponseHandler(status, response) {
+  // Grab the form:
+  var $form = $('#payment-form');
+
+  if (response.error) { // Problem!
+
+    // Show the errors on the form:
+    $form.find('.payment-errors').text(response.error.message);
+    $form.find('.submit').prop('disabled', false); // Re-enable submission
+
+  } else { // Token was created!
+
+    // Get the token ID:
+    var token = response.id;
+
+    // Insert the token ID into the form so it gets submitted to the server:
+    $form.append($('<input type="hidden" name="stripeToken">').val(token));
+
+    // Submit the form:
+    $form.get(0).submit();
+  }
+};
+
+$(function() {
+  var $form = $('#payment-form');
+  $form.submit(function(event) {
+    // Disable the submit button to prevent repeated clicks:
+    $form.find('.submit').prop('disabled', true);
+
+    // Request a token from Stripe:
+    Stripe.card.createToken($form, stripeResponseHandler);
+
+    // Prevent the form from being submitted:
+    return false;
+  });
+});
+</script>
+</html>
